docs: adiciona na documentação do swagger os endpoints restantes para testar; adiciona folder de schemas (modelo e tipos das entradas) e parameters (organiza os tipos da entradas em si na docs)
